--- a/touchbase-react/src/components/Iterations/Iterations.css
+++ b/touchbase-react/src/components/Iterations/Iterations.css
@@ -4,10 +4,7 @@
   //background-color: yellow;
   //margin-left: 100px;
   //margin-top: 50px;
-}
-
-.main-content-responsive {
-
+  margin-left: 220px;
 }
 
 .influencer-name {
@@ -31,20 +28,21 @@
 }
 
 .influencer-left-side-info-iteration {
-  background-color: #2f323a;
   z-index: 1;
   top: 0;
-  margin-top: 88px;
-  padding-top: 30px;
-  position: absolute;
+  background: #2f323a;
+  //margin-top: 70px;
+  padding-top: 80px;
+  position: fixed;
   left: 0;
-  width: 300px;
+  width: 220px;
   //width: 10%;
-  //height: 100%;
+  height: 100%;
   transition: 0.5s;
   transition-property: left;
   overflow-y: auto;
   color: white;
+  //margin-top: 80px;
 }
 
 /*.bookings {
@@ -59,15 +57,19 @@
   font-family: "HelveticaNeue-Bold", sans-serif;
 }
 
-.ind-meet-content {
-  //background-color: red;
+.ind-meet-content-iterations {
+  //display: flex;
   height: 5vh;
   align-items: center;
   justify-content: center;
   text-align: center;
+  //margin-bottom: 10px;
+  //background-color: blue;
   border-radius: 20px;
   display: grid;
   grid-template: 5vh / 20vw 10vw 10vw 10vw 10vw 10vw 15vw ;
+  //margin-left: 13%;
+  margin-right: 1%;
   font-size: 15px;
   text-transform: uppercase;
   font-weight: 600;
@@ -84,6 +86,89 @@
 }
 
 .bookings {
-  margin-left: 310px;
+  margin-left: 20px;
   margin-right: 20px;
+}
+
+@media screen and (max-width: 1500px) {
+
+  .ind-meet-content-iterations {
+    display: none;
+  }
+
+}
+
+
+@media screen and (max-width: 900px) {
+
+  .bookings {
+    //background-color: red;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .main-content {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .iterations-content {
+    //background-color: blue;
+    //background-color: gray;
+    margin-left: 20px;
+    margin-right: 20px;
+    //display: flex;
+    margin-top: 300px;
+  }
+
+  .influencer-left-side-info-iteration {
+    background: #2f323a;
+    width: 100%;
+    height: auto;
+    color: white;
+    display: grid;
+    grid-template-rows: 100px;
+    position: absolute;
+  }
+
+  .seller-categories {
+    font-size: 15px;
+    line-height: 1.5;
+    text-align: left;
+    margin-left: 20px;
+    //margin-top: 10px;
+    margin-right: 20px;
+    text-align: center;
+  }
+
+  .seller-name {
+    font-size: 40px;
+    //line-height: 1.5;
+    //margin-left: 20px;
+    //margin-right: 20px;
+    text-align: center;
+    //background-color: green;
+  }
+
+  .seller-handles {
+    font-size: 15px;
+    line-height: 1.5;
+    text-align: left;
+    margin-right: 20px;
+    margin-left: 20px;
+    text-align: center;
+  }
+
+  .seller-bio {
+    font-size: 15px;
+    line-height: 1.5;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+  }
+
 }
