--- a/touchbase-react/src/components/Meetings/IndividualMeetingsPast.css
+++ b/touchbase-react/src/components/Meetings/IndividualMeetingsPast.css
@@ -47,3 +47,21 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+@media screen and (max-width: 1100px) {
+  .ind-content-past {
+    //background-color: pink;
+    display: block;
+    width: auto;
+    height: auto;
+    padding: 20px;
+  }
+  .ind-content-past > div {
+    padding-top: 10px;
+  }
+
+  .ind-meeting-past-heading {
+    display: inline;
+    font-weight: 600;
+  }
+}
