--- a/touchbase-react/src/components/Meetings/MeetingsNew.css
+++ b/touchbase-react/src/components/Meetings/MeetingsNew.css
@@ -66,7 +66,7 @@
   border-radius: 20px;
   display: grid;
   grid-template: 5vh / 20vw 10vw 10vw 10vw 10vw 10vw 15vw ;
-  margin-left: 12.5%;
+  margin-left: 13%;
   margin-right: 1%;
   font-size: 15px;
   text-transform: uppercase;
@@ -114,31 +114,36 @@
 @media screen and (max-width: 1100px) {
 
   .ind-meeting-content-upcoming {
-    background-color: blue;
+    //background-color: blue;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    //display: flex;
+    margin-top: 50px;
   }
 
   .meet-heading {
-    background-color: red;
+    //background-color: red;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+
   }
 
   .meet-links {
-    background-color: yellow;
+    //background-color: yellow;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 30px;
   }
 
   .ind-meet-content {
-    background-color: green;
+    //background-color: green;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    display: none;
   }
 
 }
