--- a/touchbase-react/src/components/Meetings/MeetingsPast.css
+++ b/touchbase-react/src/components/Meetings/MeetingsPast.css
@@ -111,3 +111,40 @@
     transform: translate3d(0, 0, 0);
   }
 }
+
+@media screen and (max-width: 1100px) {
+
+  .ind-meeting-content-past {
+    //background-color: blue;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    //display: flex;
+    margin-top: 50px;
+  }
+
+  .meet-heading-past {
+    //background-color: red;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+
+  }
+
+  .meet-links-past {
+    //background-color: yellow;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+  }
+
+  .ind-meet-content-past {
+    //background-color: green;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    display: none;
+  }
+
+}
