--- a/touchbase-react/src/components/Settings/ChangeEmail.css
+++ b/touchbase-react/src/components/Settings/ChangeEmail.css
@@ -88,3 +88,11 @@
   padding-top: 20px;
   text-align: center;
 }
+
+@media screen and (max-width: 1100px) {
+
+  .popup-box-email {
+    margin-left: 0px;
+  }
+
+}
