--- a/touchbase-react/src/components/Settings/ChangePassword.css
+++ b/touchbase-react/src/components/Settings/ChangePassword.css
@@ -87,3 +87,11 @@
   padding-top: 20px;
   text-align: center;
 }
+
+@media screen and (max-width: 1100px) {
+
+  .popup-box-password {
+    margin-left: 0px;
+  }
+
+}
