--- a/touchbase-react/src/components/InfluencerTouchbases/InfluencerTouchbases.css
+++ b/touchbase-react/src/components/InfluencerTouchbases/InfluencerTouchbases.css
@@ -455,4 +455,12 @@
     text-align: center;
   }
 
+  @media screen and (max-width: 500px) {
+
+    .your-touchbases-one-on-one-influencer {
+      margin-top: 350px;
+    }
+
+  }
+
 }
