--- a/touchbase-react/src/components/Menu/Menu.css
+++ b/touchbase-react/src/components/Menu/Menu.css
@@ -346,4 +346,43 @@ label #sidebar_btn:hover{
   .active{
     display: block;
   }
+
+  .dropdown-mobile {
+    position: relative;
+    display: inline-block;
+    color: black;
+    display: block;
+    line-height: 60px;
+    text-decoration: none;
+    padding-left: 15px;
+    box-sizing: border-box;
+    transition: 0.5s;
+    transition-property: background;
+  }
+
+  .dropdown-mobile:hover {
+    background-color: #5271ff;
+    color: white;
+  }
+
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content-mobile {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+
+  /* Links inside the dropdown */
+  .dropdown-content-mobile a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+  /* Show the dropdown menu on hover */
+  .dropdown-mobile:hover .dropdown-content-mobile {display: block;}
 }
