--- a/touchbase-react/src/components/NavBar/Navbar.css
+++ b/touchbase-react/src/components/NavBar/Navbar.css
@@ -63,12 +63,47 @@
 @media screen and (max-width: 600px) {
 
   .navbar-logo .logo {
-    width: 160px;
+    width: 130px;
     height: 100%;
-    //margin-top: 5px;
+    margin-top: 5px;
   }
 
   .menu-items {
     padding-top: 10px;
   }
+
+  .nav-items {
+    //padding-top: 10px;
+    font-size: 18px;
+    //background-color: red;
+    //padding-bottom: 10px;
+  }
+  .nav-links-sign-up {
+    padding: 8px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+
+  .navbar-logo .logo {
+    width: 100px;
+    height: 100%;
+    margin-top: 7px;
+    margin-left: 0px;
+  }
+
+  .menu-items {
+    padding-top: 7px;
+  }
+
+  .nav-items {
+    //padding-top: 10px;
+    font-size: 15px;
+    //background-color: red;
+    //padding-bottom: 10px;
+  }
+  .nav-links-sign-up {
+    padding: 8px;
+  }
+
 }
