--- a/touchbase-react/src/components/Meetings/IndividualMeetingsPast.css
+++ b/touchbase-react/src/components/Meetings/IndividualMeetingsPast.css
@@ -26,6 +26,10 @@
   font-size: 20px;
 }
 
+.ind-meeting-past-heading {
+  display: none
+}
+
 @keyframes slideInTop {
   from {
     transform: translate3d(0, 30%, 0);
