--- a/touchbase-react/src/components/YourTouchbases/MyTouchbase.css
+++ b/touchbase-react/src/components/YourTouchbases/MyTouchbase.css
@@ -66,3 +66,11 @@
   margin-bottom: 1vh;
   border-radius: 10px;
 }
+
+.my-touchbase-content-delete:hover {
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+  transition: 1s;
+  font-weight: 600
+}
