--- a/touchbase-react/src/components/Popup/PopupDeleteIterations.css
+++ b/touchbase-react/src/components/Popup/PopupDeleteIterations.css
@@ -7,7 +7,7 @@
   transition: opacity 1s ease-in;
   position: fixed;
   z-index: 999999;
-  color: white;
+  color: black;
 
 }
 
@@ -23,7 +23,7 @@
   padding: 20px;
   border: 1px solid #999;
   overflow: auto;*/
-  background-color: #5271ff;
+  background-color: #b1befc;
   border-radius: 10px;
   padding: 15px;
   //bottom: 12px;
