dashboard error fixed. cancelations errors fixed.

--- a/touchbase-react/src/components/Meetings/IndividualMeetingUpcoming.css
+++ b/touchbase-react/src/components/Meetings/IndividualMeetingUpcoming.css
@@ -36,6 +36,14 @@
   border: 3px solid #5271ff;
 }
 
+.ind-join-button:hover {
+  background-color: #5271ff;
+  color: white;
+  border: 1px solid black;
+  transition: 1s;
+  font-weight: 600
+}
+
 .ind-cancel-button {
   color: black;
   background-color: white;
@@ -49,6 +57,37 @@
   width: 100px;
   //font-weight: 600;
   border: 2px solid gray;
+}
+
+.ind-cancel-two-button {
+  color: black;
+  background-color: white;
+  font-size: 12px;
+  border-radius: 8px;
+  //margin: 15px;
+  //margin-top: 10px;
+  padding: 5px 10px;
+  font-family: "HelveticaNeue-Light", sans-serif;
+  border: 1px solid white;
+  width: 70px;
+  //font-weight: 600;
+  border: 2px solid gray;
+}
+
+.ind-cancel-two-button:hover  {
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+  transition: 1s;
+  font-weight: 600
+}
+
+.ind-cancel-button:hover {
+  background-color: black;
+  color: white;
+  border: 1px solid black;
+  transition: 1s;
+  font-weight: 600
 }
 
 .ind-title {
